--- a/src/Graphs3D/App.xaml
+++ b/src/Graphs3D/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ParticleLife3D.App"
+﻿<Application x:Class="Graphs3D.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ParticleLife3D"
+             xmlns:local="clr-namespace:Graphs3D"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <SolidColorBrush x:Key="{x:Static SystemColors.MenuBrushKey}" Color="White" />
