--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ParticleLife3D.Gui.ConfigWindow"
+﻿<Window x:Class="Graphs3D.Gui.ConfigWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ParticleLife3D.Gui"
+        xmlns:local="clr-namespace:Graphs3D.Gui"
         mc:Ignorable="d"
         Title="ConfigWindow" 
         Width="350"
