--- a/src/Graphs3D/MainWindow.xaml
+++ b/src/Graphs3D/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ParticleLife3D.MainWindow"
+﻿<Window x:Class="Graphs3D.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ParticleLife3D"
+        xmlns:local="clr-namespace:Graphs3D"
         mc:Ignorable="d"
         Title="ParticleLife3D" Width="Auto" Height="Auto" WindowState ="Maximized" MinWidth="320" MinHeight="320">
 
