--- a/src/Graphs3D/MainWindow.xaml
+++ b/src/Graphs3D/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Graphs3D"
         mc:Ignorable="d"
-        Title="ParticleLife3D" Width="Auto" Height="Auto" WindowState ="Maximized" MinWidth="320" MinHeight="320">
+        Title="Graphs3D" Width="Auto" Height="Auto" WindowState ="Maximized" MinWidth="320" MinHeight="320">
 
     <Grid Name="parent" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Loaded="parent_Loaded">
         <Grid Name="placeholder" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
