--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -123,8 +123,9 @@
                 </Grid>
 
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Graph" Grid.ColumnSpan="1" VerticalAlignment="Center" Margin="10,5,5,0" Foreground="White" TextWrapping="Wrap"/>
-                <ComboBox Name="graph" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" SelectionChanged="global_SelectionChanged" Margin="0,5,10,0">
-                    <ComboBoxItem IsSelected="True">LatticeGraph</ComboBoxItem>
+                <ComboBox Name="graphCombo" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" SelectionChanged="global_SelectionChanged" Margin="0,5,10,0">
+                    <ComboBoxItem IsSelected="True" Tag="Graphs3D.Graphs.TicTacToe.TicTacToeGraph3x3">Tic Tac Toe 3x3</ComboBoxItem>
+                    <ComboBoxItem Tag="Graphs3D.Graphs.Geometry.CylinderGraph20x20">Cylinder 10x20</ComboBoxItem>
                 </ComboBox>
 
                 <!-- dt -->
@@ -139,7 +140,7 @@
 
                 <!-- line width -->
                 <TextBlock Grid.Row="6" Grid.Column="0" Text="line width ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Width of edge line"/>
-                <Slider Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Minimum="100" Maximum="3000" SmallChange="50" LargeChange="200" ValueChanged="Slider_ValueChanged" Tag="lineWidth" VerticalAlignment="Center"/>
+                <Slider Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="50" LargeChange="200" ValueChanged="Slider_ValueChanged" Tag="lineWidth" VerticalAlignment="Center"/>
                 <TextBlock Grid.Row="6" Grid.Column="2" Tag="lineWidth"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
             
