--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -104,7 +104,9 @@
                             </Style>
                         </ToggleButton.Style>
                     </ToggleButton>
-                    <ToggleButton Name="recordButton" Grid.Row="0" Grid.Column="4" ToolTip="Record frames as PNG files to given folder" Click="Record_Click">
+                    <Button Grid.Row="0" Grid.Column="3" Name="expandMoreButton">Expand+</Button>
+                    <Button Grid.Row="0" Grid.Column="4" Name="expandAllButton">Exp. All</Button>
+                    <ToggleButton Name="recordButton" Grid.Row="0" Grid.Column="5" ToolTip="Record frames as PNG files to given folder" Click="Record_Click">
                         <ToggleButton.Style>
                             <Style TargetType="ToggleButton">
                                 <Setter Property="Content">
