--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -88,6 +88,7 @@
 
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
                     <Button Grid.Row="0" Grid.Column="0" Name="restartButton">Restart</Button>
@@ -134,6 +135,7 @@
                             </Style>
                         </ToggleButton.Style>
                     </ToggleButton>
+                    <Button Grid.Row="1" Grid.Column="0" Name="winButton">Win</Button>
                 </Grid>
 
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Graph" Grid.ColumnSpan="1" VerticalAlignment="Center" Margin="10,5,5,0" Foreground="White" TextWrapping="Wrap"/>
