--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -136,6 +136,7 @@
                         </ToggleButton.Style>
                     </ToggleButton>
                     <Button Grid.Row="1" Grid.Column="0" Name="winButton">Win</Button>
+                    <Button Grid.Row="1" Grid.Column="2" Name="expandWinButton">Expand win</Button>
                 </Grid>
 
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Graph" Grid.ColumnSpan="1" VerticalAlignment="Center" Margin="10,5,5,0" Foreground="White" TextWrapping="Wrap"/>
