--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -140,6 +140,7 @@
                         </ToggleButton.Style>
                     </ToggleButton>
                     <Button Grid.Row="1" Grid.Column="3" Name="bestButton" ToolTip="Go to the node that is currently closest to the solution">Best</Button>
+                    <Button Grid.Row="1" Grid.Column="4" Name="rootButton" ToolTip="Go to the root">Root</Button>
 
                 </Grid>
 
