--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -141,6 +141,18 @@
                     </ToggleButton>
                     <Button Grid.Row="1" Grid.Column="3" Name="bestButton" ToolTip="Go to the node that is currently closest to the solution">Best</Button>
                     <Button Grid.Row="1" Grid.Column="4" Name="rootButton" ToolTip="Go to the root">Root</Button>
+                    <ToggleButton Grid.Row="1" Grid.Column="5" IsChecked="True" Name="imgButton" ToolTip="Toggle visibility of image showing game position">
+                        <ToggleButton.Style>
+                            <Style TargetType="ToggleButton">
+                                <Setter Property="Content" Value="Hide im."/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Content" Value="Show im."/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ToggleButton.Style>
+                    </ToggleButton>
 
                 </Grid>
 
