--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="ConfigWindow" 
         Width="380"
-        Height="550"  
+        Height="300"  
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterOwner"
         WindowState="Normal"
@@ -175,14 +175,25 @@
                 <Slider Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="50" LargeChange="200" ValueChanged="Slider_ValueChanged" Tag="lineWidth" VerticalAlignment="Center"/>
                 <TextBlock Grid.Row="6" Grid.Column="2" Tag="lineWidth"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
+                <!-- fog density -->
+                <TextBlock Grid.Row="7" Grid.Column="0" Text="Fog density ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Darkening of distant vertices and edges"/>
+                <Slider Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.000" Maximum="0.01" SmallChange="0.0001" LargeChange="0.001" ValueChanged="Slider_ValueChanged" Tag="fogDensity" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="7" Grid.Column="2" Tag="fogDensity"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+
+                <!-- Fade not highlighted -->
+                <TextBlock Grid.Row="8" Grid.Column="0" Text="Fade unhighlighted ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="In highlight-path mode: how much to fade other virtices and edges"/>
+                <Slider Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0" Maximum="1.0" SmallChange="0.01" LargeChange="0.1" ValueChanged="Slider_ValueChanged" Tag="unhighlightedAlpha" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="8" Grid.Column="2" Tag="unhighlightedAlpha"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+
                 <!-- expansion speed -->
-                <TextBlock Grid.Row="7" Grid.Column="0" Text="Expansion speed ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="How many nodes to add per each step"/>
-                <Slider Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="10" LargeChange="100" ValueChanged="Slider_ValueChanged" Tag="expansionSpeed" VerticalAlignment="Center"/>
-                <TextBlock Grid.Row="7" Grid.Column="2" Tag="expansionSpeed"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+                <TextBlock Grid.Row="9" Grid.Column="0" Text="Expansion speed ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="How many nodes to add per each step"/>
+                <Slider Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="10" LargeChange="100" ValueChanged="Slider_ValueChanged" Tag="expansionSpeed" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="9" Grid.Column="2" Tag="expansionSpeed"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
-
-                <Canvas Name="positionCanvas" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3" Width="300" Height="300" Background="Black" Margin="10,25,10,10" />
-
+                <!-- hidden canvas -->
+                <StackPanel Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="3" Opacity="0">
+                <Canvas Name="positionCanvas"  Width="300" Height="300" Background="Black" Margin="10,25,10,10" />
+                </StackPanel>
             </Grid>
         </DockPanel>
     </Border>
