--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="ConfigWindow" 
         Width="380"
-        Height="300"  
+        Height="400"  
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterOwner"
         WindowState="Normal"
@@ -89,13 +89,14 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
-                    <Button Grid.Row="0" Grid.Column="0" Name="restartButton">Restart</Button>
+                    <Button Grid.Row="0" Grid.Column="0" Name="restartButton" ToolTip="Restart current graph">Restart</Button>
                     <Button Grid.Row="0" Grid.Column="1" Name="centerButton">Center</Button>
-                    <Button Grid.Row="0" Grid.Column="2" Name="expandWinButton" ToolTip="Expands nodes till win position is found">Exp. win</Button>
-                    <Button Grid.Row="0" Grid.Column="3" Name="expandMoreButton" ToolTip="Expands 100 new nodes">Expand+</Button>
-                    <Button Grid.Row="0" Grid.Column="4" Name="expandAllButton" ToolTip="Expands nodes till full grapth is created">Exp. All</Button>
+                    <Button Grid.Row="0" Grid.Column="2" Name="stopButton" ToolTip="Stops current animations">Stop</Button>
+                    
                     <ToggleButton Name="recordButton" Grid.Row="0" Grid.Column="5" ToolTip="Record frames as PNG files to given folder" Click="Record_Click">
                         <ToggleButton.Style>
                             <Style TargetType="ToggleButton">
@@ -124,40 +125,43 @@
                             </Style>
                         </ToggleButton.Style>
                     </ToggleButton>
-                    
-                    <Button Grid.Row="1" Grid.Column="0" Name="stopButton" ToolTip="Stops current animations">Stop</Button>
-                    <Button Grid.Row="1" Grid.Column="1" Name="winButton" ToolTip="Shows path to win position, if found">Win path</Button>
-                    <ToggleButton Grid.Row="1" Grid.Column="2" IsChecked="False" Name="pathButton" ToolTip="Highligh path from current node to root">
-                        <ToggleButton.Style>
-                            <Style TargetType="ToggleButton">
-                                <Setter Property="Content" Value="Highligh"/>
-                                <Style.Triggers>
-                                    <Trigger Property="IsChecked" Value="True">
-                                        <Setter Property="Content" Value="Normal"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </ToggleButton.Style>
-                    </ToggleButton>
-                    <Button Grid.Row="1" Grid.Column="3" Name="bestButton" ToolTip="Go to the node that is currently closest to the solution">Best</Button>
-                    <Button Grid.Row="1" Grid.Column="4" Name="rootButton" ToolTip="Go to the root">Root</Button>
-                    <ToggleButton Grid.Row="1" Grid.Column="5" IsChecked="True" Name="imgButton" ToolTip="Toggle visibility of image showing game position">
-                        <ToggleButton.Style>
-                            <Style TargetType="ToggleButton">
-                                <Setter Property="Content" Value="Hide im."/>
-                                <Style.Triggers>
-                                    <Trigger Property="IsChecked" Value="True">
-                                        <Setter Property="Content" Value="Show im."/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </ToggleButton.Style>
-                    </ToggleButton>
+
+                   
+
+                    <!-- animating to -->
+                    <Button Grid.Row="2" Grid.Column="0" Name="animateToBtn">Go to:</Button>
+                    <ComboBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Name="animateToCombo">
+                        <ComboBoxItem>Root</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">Win</ComboBoxItem>
+                        <ComboBoxItem>Best</ComboBoxItem>
+                    </ComboBox>
+
+                    <!-- expanding nodes -->
+                    <Button Grid.Row="2" Grid.Column="3" Name="expandBtn">Expand:</Button>
+                    <ComboBox Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2" Name="expandCombo">
+                        <ComboBoxItem>Next 100 nodes</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">Till winning position found</ComboBoxItem>
+                        <ComboBoxItem>All</ComboBoxItem>
+                    </ComboBox>
+
+
+                    <CheckBox Name="highlightCheckbox" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">Highlight</CheckBox>
+                    <CheckBox Name="rotateCheckbox" IsChecked="True" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2">Rotate</CheckBox>
+                    <CheckBox Name="showImageCheckbox" IsChecked="True" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2">Show image</CheckBox>
 
                 </Grid>
 
+                <!-- graph selection -->
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Graph" Grid.ColumnSpan="1" VerticalAlignment="Center" Margin="10,5,5,0" Foreground="White" TextWrapping="Wrap"/>
                 <ComboBox Name="graphCombo" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" SelectionChanged="global_SelectionChanged" Margin="0,5,10,0">
+                </ComboBox>
+
+                <!-- navigation mode -->
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="Navigation mode" Grid.ColumnSpan="1" VerticalAlignment="Center" Margin="10,5,5,0" Foreground="White" TextWrapping="Wrap"/>
+                <ComboBox Name="navigationCombo" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,5,10,0">
+                    <ComboBoxItem IsSelected="True">Locked on center</ComboBoxItem>
+                    <ComboBoxItem>Locked on selected node</ComboBoxItem>
+                    <ComboBoxItem>Free navigation</ComboBoxItem>
                 </ComboBox>
 
                 <!-- dt -->
