--- a/src/Graphs3D/Gui/ConfigWindow.xaml
+++ b/src/Graphs3D/Gui/ConfigWindow.xaml
@@ -145,9 +145,9 @@
                     </ComboBox>
 
 
-                    <CheckBox Name="highlightCheckbox" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">Highlight</CheckBox>
-                    <CheckBox Name="rotateCheckbox" IsChecked="True" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2">Rotate</CheckBox>
-                    <CheckBox Name="showImageCheckbox" IsChecked="True" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2">Show image</CheckBox>
+                    <CheckBox Name="highlightCheckbox" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" ToolTip="Highlight path from root to selected node">Highlight</CheckBox>
+                    <CheckBox Name="autoDistCheckbox" IsChecked="True" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" ToolTip="Adapt automatically distance to the camera">Auto distance</CheckBox>
+                    <CheckBox Name="showImageCheckbox" IsChecked="True" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2" ToolTip="Display game position">Show image</CheckBox>
 
                 </Grid>
 
@@ -169,33 +169,43 @@
                 <Slider Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.001" Maximum="1" SmallChange="0.001" LargeChange="0.1" ValueChanged="Slider_ValueChanged" Tag="config.dt" VerticalAlignment="Center"/>
                 <TextBlock Grid.Row="4" Grid.Column="2" Tag="config.dt"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
+                <!-- rotation speed -->
+                <TextBlock Grid.Row="5" Grid.Column="0" Text="Rotation speed ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Rotation speed in lock mode"/>
+                <Slider Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.0" Maximum="0.01" SmallChange="0.0001" LargeChange="0.001" ValueChanged="Slider_ValueChanged" Tag="rotationSpeed" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="5" Grid.Column="2" Tag="rotationSpeed"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+
+                <!-- camera period -->
+                <TextBlock Grid.Row="6" Grid.Column="0" Text="Camera adaptation time ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Camera adaptation time"/>
+                <Slider Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="1000" SmallChange="1" LargeChange="10" ValueChanged="Slider_ValueChanged" Tag="cameraPeriod" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="6" Grid.Column="2" Tag="cameraPeriod"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+
                 <!-- particleSize -->
-                <TextBlock Grid.Row="5" Grid.Column="0" Text="Node size ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Screen size of node balls"/>
-                <Slider Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.1" Maximum="2" SmallChange="0.02" LargeChange="0.1" ValueChanged="Slider_ValueChanged" Tag="particleSize" VerticalAlignment="Center"/>
-                <TextBlock Grid.Row="5" Grid.Column="2" Tag="particleSize"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+                <TextBlock Grid.Row="7" Grid.Column="0" Text="Node size ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Screen size of node balls"/>
+                <Slider Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.1" Maximum="2" SmallChange="0.02" LargeChange="0.1" ValueChanged="Slider_ValueChanged" Tag="particleSize" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="7" Grid.Column="2" Tag="particleSize"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
                 <!-- line width -->
-                <TextBlock Grid.Row="6" Grid.Column="0" Text="line width ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Width of edge line"/>
-                <Slider Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="50" LargeChange="200" ValueChanged="Slider_ValueChanged" Tag="lineWidth" VerticalAlignment="Center"/>
-                <TextBlock Grid.Row="6" Grid.Column="2" Tag="lineWidth"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+                <TextBlock Grid.Row="8" Grid.Column="0" Text="line width ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Width of edge line"/>
+                <Slider Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="50" LargeChange="200" ValueChanged="Slider_ValueChanged" Tag="lineWidth" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="8" Grid.Column="2" Tag="lineWidth"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
                 <!-- fog density -->
-                <TextBlock Grid.Row="7" Grid.Column="0" Text="Fog density ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Darkening of distant vertices and edges"/>
-                <Slider Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.000" Maximum="0.01" SmallChange="0.0001" LargeChange="0.001" ValueChanged="Slider_ValueChanged" Tag="fogDensity" VerticalAlignment="Center"/>
-                <TextBlock Grid.Row="7" Grid.Column="2" Tag="fogDensity"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+                <TextBlock Grid.Row="9" Grid.Column="0" Text="Fog density ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="Darkening of distant vertices and edges"/>
+                <Slider Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0.000" Maximum="0.01" SmallChange="0.0001" LargeChange="0.001" ValueChanged="Slider_ValueChanged" Tag="fogDensity" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="9" Grid.Column="2" Tag="fogDensity"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
                 <!-- Fade not highlighted -->
-                <TextBlock Grid.Row="8" Grid.Column="0" Text="Fade unhighlighted ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="In highlight-path mode: how much to fade other virtices and edges"/>
-                <Slider Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0" Maximum="1.0" SmallChange="0.01" LargeChange="0.1" ValueChanged="Slider_ValueChanged" Tag="unhighlightedAlpha" VerticalAlignment="Center"/>
-                <TextBlock Grid.Row="8" Grid.Column="2" Tag="unhighlightedAlpha"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+                <TextBlock Grid.Row="10" Grid.Column="0" Text="Fade unhighlighted ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="In highlight-path mode: how much to fade other virtices and edges"/>
+                <Slider Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="1" Minimum="0" Maximum="1.0" SmallChange="0.01" LargeChange="0.1" ValueChanged="Slider_ValueChanged" Tag="unhighlightedAlpha" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="10" Grid.Column="2" Tag="unhighlightedAlpha"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
                 <!-- expansion speed -->
-                <TextBlock Grid.Row="9" Grid.Column="0" Text="Expansion speed ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="How many nodes to add per each step"/>
-                <Slider Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="10" LargeChange="100" ValueChanged="Slider_ValueChanged" Tag="expansionSpeed" VerticalAlignment="Center"/>
-                <TextBlock Grid.Row="9" Grid.Column="2" Tag="expansionSpeed"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
+                <TextBlock Grid.Row="11" Grid.Column="0" Text="Expansion speed ⓘ" VerticalAlignment="Center" Margin="10,0,8,0" TextWrapping="Wrap" Foreground="White" ToolTip="How many nodes to add per each step"/>
+                <Slider Grid.Row="11" Grid.Column="1" Grid.ColumnSpan="1" Minimum="10" Maximum="3000" SmallChange="10" LargeChange="100" ValueChanged="Slider_ValueChanged" Tag="expansionSpeed" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="11" Grid.Column="2" Tag="expansionSpeed"  FontFamily="Courier New" Margin="0,5,10,0" VerticalAlignment="Center" FontSize="11" MouseDown="infoText_MouseDown" Foreground="White" Background="DarkGray" TextAlignment="Center" Padding="1"/>
 
                 <!-- hidden canvas -->
-                <StackPanel Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="3" Opacity="0">
+                <StackPanel Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="3" Opacity="0">
                 <Canvas Name="positionCanvas"  Width="300" Height="300" Background="Black" Margin="10,25,10,10" />
                 </StackPanel>
             </Grid>
